@@ -401,8 +401,7 @@ INSERT INTO `#DB_PREFIX#_Options` (`keyname`, `value`) VALUES
 ('reset_date', '1203413710'),
 ('useFlash', '0'),
 ('allowSig', '0'),
-('allowXML', '0'),
-('scripturl', '');
+('allowXML', '0');
 
 DROP TABLE IF EXISTS `#DB_PREFIX#_PlayerNames`;
 CREATE TABLE `#DB_PREFIX#_PlayerNames` (
